# SkillMatch-AI

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
backend/models/: schemas.py
backend/routes/: booking.py  chatbot.py  upload.py
backend/services/: embeddings.py  faiss_index.py  google_calendar.py  parser.py  store.py  summary.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chatbot/: page.tsx
frontend/src/app/match/: page.tsx
frontend/src/app/scheduler/: page.tsx
frontend/src/components/: MatchResults.tsx  UploadForm.tsx
frontend/src/config/: chatbot_questions.json
frontend/src/pages/api/: chatbot_feedback.ts
lib/: api.ts  mailer.ts  openai.ts  pinecone.ts
src/app/: layout.tsx  page.tsx
src/app/match/: page.tsx
src/app/scheduler/: page.tsx
src/app/upload/: page.tsx
src/components/: MatchResults.tsx  UploadForm.tsx
src/pages/api/: health.ts  hello.ts
